# gam-core

./: .gitignore  pyproject.toml
gam_core/: __init__.py  _add.py  _build.py  _dependency.py  _gamconfig.py  _install.py  _projectconfig.py  add.py  config.py  gam.py  gamconfig.py  gamproject.py  project.py  projectconfig.py  requirement.py  version.py
gamcore/: _util.py  api.py  gamconfig.py  models.py
gamcore/handlers/: add.py  install.py  project.py  requirement.py  version.py
gamcore/templates/: godot_project_file.py
gamcore/utils/: install.py  project.py  requirement.py
tests/: test_add_handler.py  test_gam_config.py  test_gam_core.py  test_gam_project.py  test_project_handler.py  test_requirement_handler.py  test_requirements.py
tests/gam_config/: config.toml
tests/test_projects/gd_git_project/: gamproject.toml
tests/test_projects/gd_project_a/: gamproject.toml
tests/test_projects/gd_project_b/: gamproject.toml
tests/test_projects/gd_project_b/src/: gam_keep_me
