[tool.poetry]
name = "gam-core"
version = "0.34.10"
description = ""
authors = ["Matthew Burkard <matthewjburkard@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.9.0"
tomlkit = "^0.9.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
coverage = "^6.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
